# indexing-service

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  logging_config.yml  pyproject.toml  pytest.ini
.claude/rules/: python-performance.md  tdd-principles.md
.codex/: config.toml
alembic/: env.py
alembic/versions/: acff5bddba97_init_indexing_schema.py  b3f7a2c1d9e4_add_ragas_evaluation_tables.py  c4e8f1a2b7d3_add_ragas_llm_models_table.py  d5a9e3f4c8b2_add_retrieved_chunks_column.py  e6b0f2d5a3c7_add_reference_contexts_column.py  f7c1d3e5a9b2_add_source_document_hash_column.py
app/: main.py
app/agent/: __init__.py  persona_filter_agent.py
app/chunking/: __init__.py  base.py  factory.py  fixed_chunker.py  semantic_chunker.py
app/config/: __init__.py  constants.py  opensearch_config.py  pii_config.yaml  settings.py
app/core/: error_handler.py  logging.py
app/dto/: action_log_dto.py  admin_dto.py  category_dto.py  chunk_dto.py  chunking_dto.py  cost_dto.py  cost_statistics_dto.py  document_status.py  embeddings_dto.py  file_info_dto.py  graph_dto.py  mcp_deploy_dto.py  notification_dto.py  pagination_dto.py  parser_config_dto.py  pipeline_status_dto.py  ragas_dto.py  schedule_dto.py  summary_dto.py  table_dto.py
app/embedding/: factory.py  openai_embedding.py
app/entity/: __init__.py
app/middleware/: __init__.py  action_log_middleware.py  (+2 more)
docker/: Dockerfile  Dockerfile.dev  Dockerfile.opensearch  Dockerfile.opensearch.prod
scripts/: backfill_opensearch_milvus_id.py  run_local.sh  verify_ktc_parser_retry.py
(+156 files in other folders)
