[project]
name = "indexing-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.5.8",
    "aiohttp>=3.13.3",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.14.2",
    "celery>=5.6.2",
    "croniter>=6.0.0",
    "python-docx>=1.2.0",
    "fastapi>=0.129.0",
    "PyMuPDF>=1.27.1",
    "html2text>=2025.4.15",
    "kiwipiepy>=0.22.2",
    "langchain>=1.2.10",
    "langchain-classic>=1.0.1",
    "langchain-openai>=1.1.10",
    "langchain-text-splitters>=1.1.1",
    "langgraph>=1.0.9",
    "nest-asyncio>=1.6.0",
    "numpy>=2.4.2",
    "openai>=2.21.0",
    "openpyxl>=3.1.5",
    "opensearch-py>=3.1.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pymilvus>=2.6.9",
    "python-pptx>=1.0.2",
    "redis>=7.2.0",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.41.0",
    "xlrd>=2.0.2",
    "python-multipart>=0.0.22",
    "psycopg2-binary>=2.9.11",
    "greenlet>=3.3.1",
    "ragas>=0.4.3",
    "datasets>=4.8.2",
    "pyjwt>=2.13.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.2",
]
